# cmake-make_library

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c  make_library.cmake  s1.c  s1.h  s2.c  s2.h
